src/objects/loan__Fee_Set__c.object
<CustomObject>
    <description>A set of fee</description>
    <fields>
        <fullName>loan__Fee_Set_Category__c</fullName>
        <label>Fee Set Category</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Income account where the fees will be posted.</description>
        <inlineHelpText>Please select the income account where you would want to post the fees collected.</inlineHelpText>
        <label>Income Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>30000 - INCOME</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Fee Set</relationshipLabel>
        <relationshipName>Fee_Set</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Fees__c</fullName>
        <label>Number of Fees</label>
        <summaryForeignKey>loan__Fee_Junction__c.loan__Fee_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fee Set</label>
    <nameField>
        <label>Fee Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Set</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>